# TemsChessEngine

./: .gitignore  CMakeLists.txt  README.md  game.cpp  game.h  gameInfo.h  gui.cpp  main.cpp  minimax.cpp  piece.cpp  piece.h  pieceInfo.h  piecetype.h
gui/: ebo.cpp  ebo.h  gui.cpp  gui.h  shader.cpp  shader.h  vao.cpp  vao.h  vbo.cpp  vbo.h
resources/shaders/: default.vert  piece.frag  piece.vert
